--- a/index.html
+++ b/index.html
@@ -883,8 +883,8 @@
                     <p class="text-sm text-secondary mb-1"><strong>Certifications & Affiliations:</strong></p>
                     <p class="text-xs text-secondary mb-3">Moringa School (Data Science & Software Engineering), Zetech University (BSc. IT), HackerRank (ML & Python Proficiencies), Udemy (Advanced Angular, Full-Stack JavaScript Specializations)</p>
                     <div class="links">
-                        <a href="https://github.com/MadScie254" target="_blank" title="GitHub"><i class="fab fa-github fa-lg"></i></a>
-                        <a href="https://linkedin.com/in/daniel-wanjala-912b8b17b" target="_blank" title="LinkedIn"><i class="fab fa-linkedin-in fa-lg"></i></a>
+                        <a href="https://github.com/MadScie254" target="_blank" rel="noopener noreferrer" title="GitHub"><i class="fab fa-github fa-lg"></i></a>
+                        <a href="https://linkedin.com/in/daniel-wanjala-912b8b17b" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fab fa-linkedin-in fa-lg"></i></a>
                         <a href="mailto:dmwanjal254@gmail.com" title="Email"><i class="fas fa-envelope fa-lg"></i></a>
                     </div>
                 </div>
@@ -1131,7 +1131,7 @@
                         <p><i class="fas fa-map-marker-alt mr-2 text-accent w-5 text-center"></i> Nairobi, Kenya (Primarily Remote Collaboration)</p>
                         <p><i class="fas fa-phone-alt mr-2 text-accent w-5 text-center"></i> +254 722 512 455 (Daniel Wanjala)</p>
                         <p><i class="fas fa-envelope mr-2 text-accent w-5 text-center"></i> <a href="mailto:dmwanjal254@gmail.com" class="hover:text-accent transition-colors">dmwanjal254@gmail.com</a></p>
-                        <p><i class="fab fa-whatsapp mr-2 text-accent w-5 text-center"></i> <a href="https://wa.me/254722512455?text=Hello%20Danco%20%26%20Khadija%2C%20I%27m%20interested%20in%20your%20services." target="_blank" class="hover:text-accent transition-colors">Initiate a WhatsApp Chat</a></p>
+                        <p><i class="fab fa-whatsapp mr-2 text-accent w-5 text-center"></i> <a href="https://wa.me/254742007277?text=Hello%20Danco%20%26%20Khadija%2C%20I%27m%20interested%20in%20your%20services." target="_blank" class="hover:text-accent transition-colors">Initiate a WhatsApp Chat</a></p>
                     </div>
 
                     <h4 class="text-xl font-semibold mb-3 text-primary">Submit a Detailed Project Brief</h4>
@@ -1143,8 +1143,8 @@
                      <div class="mt-10">
                          <h4 class="text-xl font-semibold mb-3 text-primary">Follow Our Journey & Insights</h4>
                          <div class="flex space-x-4">
-                            <a href="https://github.com/MadScie254" target="_blank" class="text-secondary hover:text-accent transition-colors text-2xl" title="Daniel's GitHub"><i class="fab fa-github"></i></a>
-                            <a href="https://linkedin.com/in/daniel-wanjala-912b8b17b" target="_blank" class="text-secondary hover:text-accent transition-colors text-2xl" title="Daniel's LinkedIn"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://github.com/MadScie254" target="_blank" rel="noopener noreferrer" class="text-secondary hover:text-accent transition-colors text-2xl" title="Daniel's GitHub"><i class="fab fa-github"></i></a>
+                            <a href="https://linkedin.com/in/daniel-wanjala-912b8b17b" target="_blank" rel="noopener noreferrer" class="text-secondary hover:text-accent transition-colors text-2xl" title="Daniel's LinkedIn"><i class="fab fa-linkedin"></i></a>
                             </div>
                      </div>
                 </div>
@@ -1190,10 +1190,10 @@
                         <li><i class="fas fa-map-marker-alt mr-2 opacity-70"></i> Nairobi, Kenya</li>
                         <li><i class="fas fa-phone-alt mr-2 opacity-70"></i> +254 722 512 455</li>
                         <li><i class="fas fa-envelope mr-2 opacity-70"></i> <a href="mailto:dmwanjal254@gmail.com" class="hover:text-white transition-colors">dmwanjal254@gmail.com</a></li>
-                         <li>
+                        <li>
                             <div class="flex space-x-4 mt-3">
-                                <a href="https://github.com/MadScie254" target="_blank" class="hover:text-white transition-colors" title="Daniel's GitHub"><i class="fab fa-github"></i></a>
-                                <a href="https://linkedin.com/in/daniel-wanjala-912b8b17b" target="_blank" class="hover:text-white transition-colors" title="Daniel's LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="https://github.com/MadScie254" target="_blank" rel="noopener" class="hover:text-white transition-colors" title="Daniel's GitHub"><i class="fab fa-github"></i></a>
+                                <a href="https://linkedin.com/in/daniel-wanjala-912b8b17b" target="_blank" rel="noopener noreferrer" class="hover:text-white transition-colors" title="Daniel's LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </li>
                     </ul>
